# featurekit

./: .gitignore  pyproject.toml  readme.md  requirements.txt
featurekit/: config.py  types.py  utils.py
featurekit/plotting/: __init__.py  base_plots.py  config.py  multivariate.py  univariate.py
featurekit/stats/: __init__.py  config.py  stats.py
