[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featurekit"
version = "0.1.0"
description = "A Python package for feature engineering and EDA visualization"
authors = [
    { name="Aditya Todi", email="adityaat909@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
    "pydantic-settings>=2.10.1",
    "seaborn>=0.13.2",
]

[project.urls]
Homepage = "https://github.com/aditya-todi/featurekit"

[tool.setuptools]
packages = ["featurekit"]
